Migration - add nullable attribute to dob, gender, phone, address fields on customers table

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -198,6 +198,10 @@ ul.one-page-menu li a.button:hover {
     text-align: center;
 }
 
+.swal2-confirm {
+    background-color: var(--main-scheme) !important;
+}
+
 .myProgress {
     position: fixed;
     margin-bottom: 0;
