--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -102,6 +102,17 @@
     text-align-last: center;
 }
 
+.parallax-overlay {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, .2) 0%, rgba(0, 0, 0, .45) 30%, rgba(0, 0, 0, .65) 80%, rgba(0, 0, 0, .85) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+
 ul.one-page-menu li a.button {
     padding-top: 7px !important;
     padding-bottom: 7px !important;
@@ -115,6 +126,10 @@ ul.one-page-menu li a.button:hover {
 
 .flip-carousel .owl-item {
     padding: 1em 0 !important;
+}
+
+.button-primary:not(.button-border) {
+    background-color: var(--main-scheme) !important;
 }
 
 .menu-item .button-green:not(.button-border) {
